--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
-    "@prisma/client": "^6.1.0",
+    "@nestjs/swagger": "^8.1.0",
+    "@prisma/client": "^6.2.1",
     "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "prisma": "^6.2.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
