--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express-session": "^1.18.1",
+    "helmet": "^8.0.0",
+    "i": "^0.3.7",
     "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
