--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^8.1.0",
+    "@nestjs/throttler": "^6.3.0",
     "@prisma/client": "^6.2.1",
     "bcrypt": "^5.1.1",
     "chalk": "^4.1.2",
