--- a/compose.yaml
+++ b/compose.yaml
@@ -13,6 +13,8 @@ services:
       context: .
     environment:
       NODE_ENV: production
+    env_file:
+      - .env
     ports:
       - 3000:3000
 
@@ -41,5 +43,5 @@ volumes:
   db-data:
 secrets:
   db-password:
-    file: db/password.txt
+    file: pass.txt
 
