Fixed FileModule + Integrated it with Event creation

--- a/compose.yaml
+++ b/compose.yaml
@@ -30,7 +30,8 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=example
+      - POSTGRES_DB=mydb
+      - POSTGRES_USER=postgres 
       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
     expose:
       - 5432
