--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.15",
     "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/throttler": "^6.3.0",
     "@prisma/client": "^6.2.1",
-    "prisma": "^6.2.1",
     "bcrypt": "^5.1.1",
     "chalk": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express-session": "^1.18.1",
+    "firebase": "^11.2.0",
     "helmet": "^8.0.0",
     "i": "^0.3.7",
     "multer": "1.4.5-lts.1",
@@ -59,6 +59,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
